tests/fixtures/invalid/pow_dict_none_int.py
# Cannot call pow() with Dict[str, int], None, Int
x = pow({"a": 1}, None, 1)
